<resources>
    <string name="app_name">Mr. 품앗이</string>
    <string name="login">로그인</string>
    <string name="title">Mr. 품앗이</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="remember_me">자동 로그인</string>
    <string name="forgot_pwd">비밀번호 찾기</string>
    <string name="log_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="forgot">비밀번호 찾기</string>
    <string name="forget_pwd_desc">등록된 이메일을 입력하시면 비밀번호를 찾는 방법을 보내드리겠습니다</string>
    <string name="send">전송</string>
    <string name="back_to_login">뒤로가기</string>
    <string name="otp_verification">OTP 인증</string>
    <string name="otp_desc">OTP 입력</string>
    <string name="confirm_password">새 비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="nick_name">닉네임</string>
    <string name="phone">핸드폰 번호</string>
    <string name="bank_name">은행 명</string>
    <string name="acc_no">계좌 번호</string>
    <string name="bank_img">사업자 등록 번호 사본</string>
    <string name="info">정보</string>
    <string name="apply_for_help">요청하기</string>
    <string name="edit_profile">프로필 수정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">사용자 이름</string>
    <string name="bank_account">은행 명</string>
    <string name="add">추가</string>
    <string name="description">요청사항</string>
    <string name="phone_no">휴대폰 번호</string>
    <string name="support">고객 서비스</string>
    <string name="my_helpers">도움요청</string>
    <string name="add_content_details">품앗이 정보 추가</string>
    <string name="platform">오픈마켓</string>
    <string name="title1">제목</string>
    <string name="shopping">쇼핑몰 이름</string>
    <string name="price">가격</string>
    <string name="point">포인트 등록</string>
    <string name="edit">수정</string>
    <string name="user">사용자</string>
    <string name="admin">관리자</string>
    <string name="buy_ticket">티켓 구매</string>
    <string name="buy_points">포인트 구매</string>
    <string name="option">메세지</string>
    <string name="exit_desc">종료하시겠습니까?</string>
    <string name="search">검색</string>
    <string name="message">메세지</string>
    <string name="add_content">품앗이 추가</string>
    <string name="welcome">환영합니다</string>
    <string name="user_password">비밀번호</string>
    <string name="push_notification">알림설정</string>
    <string name="contact_us">고객서비스</string>
    <string name="coins">포인트</string>
    <string name="buy">구매</string>
    <string name="my_contents">내 품앗이 &amp; 진행중인 품앗이</string>
    <string name="no">아니요</string>
    <string name="yes">예</string>
    <string name="my_content">내 품앗이</string>
    <string name="helps">진행중인 품앗이</string>
    <string name="edit_content">품앗이 수정</string>
    <string name="title_activity_edit_content">EditContentActivity</string>
    <string name="use_point">포인트</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <!--    <stirng name="online_buy">온라인 쇼핑몰\n품앗이(구매)</stirng>-->
    <!--    <stirng name="online_search">온라인 쇼핑몰\n품앗이(검색)</stirng>-->
    <!--    <stirng name="blog">블로그\n품앗이</stirng>-->
    <!--    <stirng name="cafe">카페\n품앗이</stirng>-->

    <string name="hello_world">Hello Square World!</string>
    <string name="terms_of_service">사용 약관</string>
    <string name="welcome1"> Mr. 품앗이에 오신것을 환영합니다</string>
    <string name="desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.  Randomised words which don\'t look even slightly believable.  To use a passage of Lorem Ipsum, you  need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat.</string>
    <string name="policy">서비스 사용</string>
    <string name="ok">OK</string>
    <string name="noaccount">계정이 없으십니까?    </string>
    <string name="termsandservice">사용자 약관에 동의합니다</string>
    <string name="confirm_proceed">확인 및 진행</string>
    <string name="tempnumber">+82 10 2900 1037</string>
    <string name="buyonline">쇼핑몰 구매 품앗이</string>
    <string name="cafe">카페 댓글 품앗이</string>
    <string name="blog">블로그 검색 및\n체류 품앗이</string>
    <string name="hoppingmallsearch">쇼핑몰 검색 및\n체류 품앗이</string>
    <string name="test_name">귄순우</string>
    <string name="test">Test</string>
    <string name="testername">권순우</string>
    <string name="change_pwd">비밀번호 변경</string>
    <string name="old_pwd">이전 비밀번호</string>
    <string name="new_pwd">새 비밀번호</string>
    <string name="submit">변경하기</string>
    <string name="select_platform">제목</string>
    <string name="cafe_name">카페 이름</string>
    <string name="cafe_url">카페 URL</string>
    <string name="blog_name">블로그 이름</string>
    <string name="email_validation1">이메일을 입력해주세요.</string>
    <string name="email_validation">유효한 이메일을 입력해주세요.</string>
    <string name="name_validation">이름을 입력해주세요</string>
    <string name="pwd_validation">유효한 비밀번호를 입력해주세요.</string>
    <string name="select_bank">은행 선택</string>
    <string name="terms_validation">약관동의를 체크해주세요</string>
    <string name="pwd_validation1">입력한 비밀번호와 다릅니다</string>
    <string name="nick_name_validation">닉네임을 입력해주세요 \</string>
    <string name="bank_name_validation">은행을 입력해주세요</string>
    <string name="info_validation">정보를 입력해주세요</string>
    <string name="desc_validation">내용을 입력해주세요</string>
    <string name="mobile_validation">핸드폰 번호를 입력해주세요</string>
    <string name="str_network_error">인터넷이 연결되지 않았습니다</string>
    <string name="title_validation1">이름을 입력해주세요</string>
    <string name="mall_name_validation">이메일을 입력해주세요</string>
    <string name="price_validation">가격을 입력해주세요</string>
    <string name="point_validation">포인트를 입력해주세요</string>
    <string name="str_allow_storage">권한설정을 해주세요</string>
    <string name="enable">권한설정이 완료되었습니다</string>

    <string name="open_market">오픈마켓</string>
    <string name="keyword">키워드</string>
    <string name="shopping_mall_name">쇼핑몰 이름</string>
    <string name="remaining_points">남은 포인트</string>
    <string name="id">ID</string>
    <string name="bank_account_no">계좌번호</string>
    <string name="proof">품앗이 상태</string>
    <string name="upload">Upload buy &amp; review images</string>
    <string name="chat_to_owner">채팅하기</string>
    <string name="save">저장</string>
    <string name="my_points">내 포인트</string>
    <string name="notice_board">공지사항</string>
    <string name="logout">로그아웃</string>

    <string name="cash_sent">송금완료</string>
    <string name="view_proofs">증빙자료\n보기</string>
    <string name="finished">최종완료</string>
    <string name="go_to_chat">채팅하기</string>
    <string name="confirm">확인</string>
    <string name="cash_sent1">송금</string>
    <string name="cash_desc">송금을 완료하셨습니까?</string>
    <string name="cash_sent1_finish">최종완료</string>
    <string name="cash_desc_finish">품앗이를 완료하시겠습니까?</string>
    <string name="edit_content_details">Edit Content Details</string>
    <string name="view_proof">증빙자료</string>
    <string name="view_desc">증빙자료를 확인하시겠습니까?</string>

    <string name="blog_validation1">블로그 이름을 입력해주세요</string>
    <string name="keyword_validation">키워드를 입력해주세요</string>
    <string name="cafe_validation1">카페이름을 입력해주세요</string>
    <string name="url_validation">url을 입력해주세요</string>
    <string name="platform_validation">Select Title</string>
    <string name="mall_validation1">쇼핑몰 이름을 입력해주세요</string>

    <string name="go_to_chat1">채팅하기</string>
    <string name="points">/20</string>
    <string name="public_notice">공지사항</string>
    <string name="notes">포인트가 없습니다! 포인트를 모아주세요.</string>

    <string name="admin_chat">관리자</string>

    <string name="point_granted">지금 포인트</string>
    <string name="sport_left">남은 자리</string>
    <string name="no_of_helpers_wanted">도움이 요청 수</string>
    <string name="required_point_to_register">필요한 등록 포인트</string>
    <string name="helper_validation">도움이 요청수를 입력해주세요.</string>

    <string name="delete_desc">품앗이를 삭제하시겠습니까?</string>
    <string name="copy">계좌번호 복사</string>
    <string name="remaining_slots">남은 자리</string>
    <string name="helpers_wanted">도움이 요청 수</string>
    <string name="earn_points">완료시 지급 포인트</string>
    <string name="msg_validation">메세지를 입력해주세요</string>
    <string name="otp_validation">유효하지않은 OTP 입니다.</string>
    <string name="my_content1">내가 모집한 품앗이</string>
    <string name="helps1">내가 참여한 품앗이 </string>
    <string name="enter_mall_link">Enter Mall Url</string>
    <string name="enter_website_url">쇼핑몰 링크를 입력해주세요</string>
    <string name="select_category">Select Category</string>
    <string name="sub_category">2차 카테고리</string>
    <string name="category">1차 카테고리</string>
    <string name="mall_link_validation">쇼핑몰 링크를 입력해주세요</string>
    <string name="category_validation">" 카테고리를 선택해주세요"</string>
    <string name="sub_category_validation">하위 카테고리를 선택하세요</string>
    <string name="img_validation">비즈니스 이미지를 선택하십시오.</string>
    <string name="form_desc">포인트가 부족할 경우
        <br>다른 품앗이에 참여하면</br>
        <br>포인트를 획득할 수 있습니다</br></string>
    <string name="btn1">구매 증빙 예시</string>
    <string name="btn2">리뷰 사진 예시</string>
</resources>