<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ForgotPwdActivity">
    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/noto_medium"
        android:text="@string/forgot"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_password"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:layout_marginTop="87dp"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_pwd"
        android:padding="18dp"/>

    <TextView
        android:id="@+id/tv_forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_semi_bold"
        android:gravity="end"
        android:layout_marginTop="17dp"
        android:text="@string/forgot_pwd"
        app:layout_constraintTop_toBottomOf="@id/img_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_forget_pwd_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/text_color"
        android:fontFamily="@font/noto_regular"
        android:layout_marginTop="2dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pwd"
        android:text="@string/forget_pwd_desc"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:hint="@string/email"
        android:outlineAmbientShadowColor="#D8D8D8"
        android:outlineSpotShadowColor="#D8D8D8"
        android:textColorHint="@color/text_color_hint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#D8D8D8"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/text_color_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_pwd_desc">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/noto_regular"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/app_color"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tl_email">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/noto_semi_bold"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/text_color"
        android:fontFamily="@font/noto_semi_bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/back_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_11ssp" />



</androidx.constraintlayout.widget.ConstraintLayout>