<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/dialog_bg1"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/noto_semi_bold"
            android:text="@string/view_proof"
            android:textColor="@color/black"
            android:layout_marginTop="31dp"
            android:layout_marginStart="19dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/noto_medium"
            android:text="@string/view_desc"
            android:textColor="@color/text_color"
            android:textSize="16sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/border_bg"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/noto_semi_bold"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/app_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/app_color"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvYes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/noto_semi_bold"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>