<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/noto_medium"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/tv_title"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:alpha="0.5"
        android:hint="@string/email"
        android:outlineAmbientShadowColor="#D8D8D8"
        android:outlineSpotShadowColor="#D8D8D8"
        android:textColorHint="@color/text_color_hint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#D8D8D8"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/text_color_hint"
        app:layout_constraintEnd_toEndOf="@+id/tl_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/noto_regular"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:hint="@string/password"
        android:outlineAmbientShadowColor="#D8D8D8"
        android:outlineSpotShadowColor="#D8D8D8"
        android:textColorHint="@color/text_color_hint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeColor="#D8D8D8"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/text_color_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_email">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/noto_regular"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tl_password">

        <CheckBox
            android:id="@+id/chk_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_medium"
            android:text="@string/remember_me"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/tv_forgot_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_medium"
            android:gravity="end"
            android:text="@string/forgot_pwd"
            android:textColor="@color/app_color"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogIn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/app_color"
        app:cardCornerRadius="5dp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ll_remember">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/noto_semi_bold"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:alpha="0.7"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/text_color"
            android:fontFamily="@font/noto_regular"
            android:gravity="center_horizontal"
            android:text="계정이 없으신가요?  "
            android:textColor="@color/text_color_hint"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="@color/text_color"
            android:fontFamily="@font/noto_regular"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/app_color"
            android:textSize="13sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>